--- a/index.html
+++ b/index.html
@@ -8,18 +8,26 @@
     <title>momentum app</title>
 </head>
 <body>
+  <div id="big">
     <form id="login-form" class="hidden">
-        <input
-          required
-          maxlength="15"
-          type="text"
-          placeholder="What is your name?"
-        />
-        <input type="submit" value="Log In" />
-      </form>
+      <input
+        required
+        maxlength="15"
+        type="text"
+        placeholder="What is your name?"
+      />
+      <input type="submit" value="Log In" />
+    </form>
     <h2 id="clock">00:00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
+    <div id="quote">
+      <span></span>
+      <span></span>
+    </div>
+  </div>
     <script src="js/clock.js"></script>
     <script src="js/greetings.js"></script>
-</body>
+    <script src="js/quotes.js"></script>
+    <script src="js/background.js "></script>
+  </body>
 </html>
