--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
     <script src="js/greetings.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js "></script>
+    <script src="js/weather.js "></script>
   </body>
 </html>
