--- a/index.html
+++ b/index.html
@@ -8,27 +8,31 @@
     <title>momentum app</title>
 </head>
 <body>
-  <div id="big">
-    <form id="login-form" class="hidden">
-      <input
-        required
-        maxlength="15"
-        type="text"
-        placeholder="What is your name?"
-      />
-      <input type="submit" value="Log In" />
-    </form>
-    <h2 id="clock">00:00:00</h2>
-    <h1 id="greeting" class="hidden"></h1>
-    <form id="todo-form">
-      <input type="text" placeholder="Write a To Do and Press Enter" required/>
-    </form>
-    <ul id="todo-list"></ul>
-    <div id="quote">
+    <div id="big">
+      <form id="login-form" class="hidden">
+        <input
+         required
+          maxlength="15"
+          type="text"
+          placeholder="What is your name?"
+        />
+        <input type="submit" value="Log In" />
+      </form>
+      <h2 id="clock">00:00:00</h2>
+      <h1 id="greeting" class="hidden"></h1>
+      <form id="todo-form">
+        <input type="text" placeholder="Write a To Do and Press Enter" required/>
+      </form>
+      <ul id="todo-list"></ul>
+      <div id="quote">
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+    <div id="weather">
       <span></span>
       <span></span>
     </div>
-  </div>
     <script src="js/todo.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/greetings.js"></script>
