--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
 </head>
 <body>
     <div id="big">
-      <form id="login-form" class="hidden">
-        <input
-         required
-          maxlength="15"
-          type="text"
-          placeholder="What is your name?"
-        />
-        <input type="submit" value="Log In" />
-      </form>
-      <h2 id="clock">00:00:00</h2>
-      <h1 id="greeting" class="hidden"></h1>
+      <div id="big-clock">
+        <h2 id="clock">00:00:00</h2>
+      </div>
+      <div id="big-form">
+        <form id="login-form" class="hidden">
+          <input
+           required
+            maxlength="15"
+            type="text"
+            placeholder="What is your name?"
+          />
+          <input type="submit" value="Log In" />
+        </form>
+      </div>
+      <div id="big-name">
+        <h1 id="greeting" class="hidden"></h1>
+      </div>
       <form id="todo-form">
         <input type="text" placeholder="Write a To Do and Press Enter" required/>
       </form>
@@ -28,10 +34,10 @@
         <span></span>
         <span></span>
       </div>
-    </div>
-    <div id="weather">
-      <span></span>
-      <span></span>
+      <div id="weather">
+        <span></span>
+        <span></span>
+      </div>
     </div>
     <script src="js/todo.js"></script>
     <script src="js/clock.js"></script>
