--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <div id="quote">
       <span></span>
-      <span></span>
+      <span class="hidden"></span>
     </div>
     <script src="js/todo.js"></script>
     <script src="js/clock.js"></script>
