--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
       <div id="big-name">
         <h1 id="greeting" class="hidden"></h1>
       </div>
-      <form id="todo-form">
-        <input type="text" placeholder="Write a To Do and Press Enter" required/>
-      </form>
-      <ul id="todo-list"></ul>
+      <div id="big-todo">
+        <form id="todo-form">
+          <input type="text" placeholder="Write a To Do and Press Enter" required/>
+        </form>
+        <ul id="todo-list"></ul>
+      </div>
       <div id="weather">
         <span></span>
         <span></span>
